--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarUsuarios.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarUsuarios.fxml
@@ -42,7 +42,7 @@
                                 <TableColumn fx:id="colId" prefWidth="136.0" text="Id" />
                             </columns>
                         </TableView>
-                        <TextField fx:id="usuarioTextField" focusTraversable="false" layoutX="486.0" layoutY="27.0" prefHeight="25.0" prefWidth="215.0" promptText="Buscar por Nome, Autor ou Categoria" />
+                        <TextField fx:id="usuarioTextField" focusTraversable="false" layoutX="486.0" layoutY="27.0" prefHeight="25.0" prefWidth="215.0" promptText="Buscar" />
                         <Button fx:id="buscarUsuario" layoutX="711.0" layoutY="24.0" mnemonicParsing="false" onAction="#onBuscarDoGerenciarUsuarioClick" prefHeight="25.0" prefWidth="75.0" style="-fx-background-color: purple;" text="Buscar" textFill="WHITE">
                             <font>
                                 <Font size="15.0" />
@@ -60,14 +60,6 @@
                             </cursor>
                         </Button>
                         <Button fx:id="removerUsuario" layoutX="113.0" layoutY="391.0" mnemonicParsing="false" onAction="#onRemoverUsuarioClick" prefHeight="31.0" prefWidth="141.0" style="-fx-background-color: purple;" text="Remover usuário" textFill="WHITE">
-                            <font>
-                                <Font size="15.0" />
-                            </font>
-                            <cursor>
-                                <Cursor fx:constant="HAND" />
-                            </cursor>
-                        </Button>
-                        <Button fx:id="adicionarUsuario" layoutX="265.0" layoutY="391.0" mnemonicParsing="false" onAction="#onadicionarUsuarioClick" prefHeight="31.0" prefWidth="141.0" style="-fx-background-color: purple;" text="Adicionar usuário" textFill="WHITE">
                             <font>
                                 <Font size="15.0" />
                             </font>
